--- a/README.org
+++ b/README.org
@@ -5,6 +5,14 @@ Creates pictures of a video file and delete duplicate in these pictures
 Can also be used for pictures only with option ~-w~  make sure to use the ~-P~ option to give the correct path to your files.
 
 
+* Requirements
+
+#+begin_src bash
+findimagedupes
+python
+ffmpeg
+#+end_src
+
 
 * examples
 with video
