--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@ Creates pictures of a video file and delete duplicate in these pictures
 Can also be used for pictures 
 only with option ~-w~  make sure to use the ~-P~ option to give the correct path to your files.
 
+Threshold default is 95 (for similiarity) (100 means exact the same)
 
 * Requirements
 
